# robomaster_s1_rust

./: .gitignore  COLCON_IGNORE  Cargo.toml  README.md  can0_interface_setup.sh  how-to-build-robomaster-rust_s1_driver.md
config/: embedded_config.toml
examples/: basic_control.rs  debug_control.rs  embedded_joystick_control.rs  joystick_control.rs  sensor_monitor.rs
src/: error.rs  lib.rs
src/can/: mod.rs
src/command/: builder.rs  mod.rs
src/control/: mod.rs
src/crc/: crc16.rs  crc8.rs  mod.rs
src/joystick/: mod.rs  mod_new.rs  mod_old.rs
tests/: integration_tests.rs
